Colocacion de CSS a la seccion promotions

--- a/css/index.css
+++ b/css/index.css
@@ -176,3 +176,77 @@
   .perfil__image{
     width: 100%;
   }
+
+  .promotions{
+    background-color: #282c34;
+    color: white;
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .promotions-container{
+    max-width: 1024px;
+    padding: 0 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 0 auto;
+    padding: 2rem 0;
+  }
+  
+  .promotions-title{
+    margin: 0;
+    font-size: 3rem;
+    text-align: center;
+  }
+  
+  .promotions__promotions{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .promotion__date{
+    margin: 0;
+    color: aqua;
+  }
+  
+  .promotions__destiny{
+    margin: 0;
+    font-size: 1.5rem;
+  }
+  
+  .promotions__pack{
+    color: aqua;
+    margin: 0;
+    font-weight: 400;
+  }
+  
+  .promotion__activities{
+    margin: 0;
+    margin-top: 0.5rem;
+    text-align: justify;
+  }
+  
+  .promotion__activity{
+    list-style: square;
+  }
+  
+  .wave-separetor{
+  width: 100%;
+  }
+  
+  .wave-separator__container{
+  margin: 0;
+  display: flex;
+  }
+  
+  .wave-separator__container--r-180deg{
+    transform: rotate(180deg);
+    margin-top: -1px;
+  }
+  
+  .wave-separetor__wave{
+  width: 100%;
+  }
