--- a/css/index.css
+++ b/css/index.css
@@ -178,8 +178,8 @@
   }
 
   .promotions{
-    background-color: #282c34;
-    color: white;
+    background-color: #ff5500;
+    color: black;
     padding: 2rem 0;
     display: flex;
     flex-direction: column;
@@ -209,7 +209,7 @@
   
   .promotion__date{
     margin: 0;
-    color: aqua;
+    color: brown;
   }
   
   .promotions__destiny{
@@ -218,7 +218,7 @@
   }
   
   .promotions__pack{
-    color: aqua;
+    color: brown;
     margin: 0;
     font-weight: 400;
   }
@@ -249,4 +249,75 @@
   
   .wave-separetor__wave{
   width: 100%;
+  }
+
+  .contacto{
+    text-align: center;
+   padding: 2rem 0;
+  }
+  .contacto-container{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 2rem;
+    margin: auto;
+  max-width: 1024px;
+  }
+  
+  .contacto__title{
+    margin: 0;
+    font-size: 2rem;
+  }
+  
+  .contacto__form{
+    display:flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  }
+  
+  .contacto__form-input{
+    border: 0.20rem solid #282c34;
+    border-radius: 0.5rem;
+    padding: 0.75rem;
+    transition: all 0.5s;
+  }
+  
+  .contacto__form-input:hover{
+    border: 0.25rem solid gold;
+  }
+  
+  .contacto__form-buttom{
+    align-self: center;
+    background-color: aqua;
+    border: 0.1rem solid aqua;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  transition: all 0.5s;
+  }
+  
+  .contacto__form-buttom:hover{
+    background-color: white;
+    border: 0.1rem solid black;
+  }
+
+  .redes{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+  }
+  
+  .redes li{
+    margin-right: 15px;
+  }
+  .redes li a i{
+    font-size: 32px;
+  }
+  
+  .footer-nav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
